<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_gravity="end"
        android:padding="12dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/product_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:src="@drawable/news_img"
        app:civ_border_color="@color/blue"
        app:civ_border_width="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicles_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/vehicles_spinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autofillHints="@string/product_name_title"
            android:hint="@string/product_name_title"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/vehicles_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/type_of_vehicles"
            android:background="@null"
            android:hint="@string/type_of_vehicles"
            android:inputType="text"
            android:padding="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/product_name_title"
            android:background="@null"
            android:hint="@string/driver_name"
            android:inputType="text"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/product_name_title"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/blue"
        android:padding="10dp"
        android:textAllCaps="false"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="8dp" />



</LinearLayout>