<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/name_row"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_of_vehicles_n" />

            <TextView
                android:id="@+id/driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/driver_name_n" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number_n" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/arif" />


        </TableRow>


    </TableLayout>

</RelativeLayout>