<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_circle" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_star" />

        </LinearLayout>


        <ImageView
            android:id="@+id/good_work_iv"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="5"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/news_img" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_work_person"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_village"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/good_work_person_village_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/village_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/title_village"
                    android:text="@string/good_work_person_village"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title_thana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_village"
                    android:layout_marginEnd="4dp"
                    android:text="@string/good_work_person_thana_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thana_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_village"
                    android:layout_toEndOf="@id/title_thana"
                    android:text="@string/good_work_person_thana"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/good_work_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_news"
        android:layout_marginStart="34dp"
        android:text="@string/good_work_title" />

    <TextView
        android:id="@+id/read_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/good_work_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/read_more"
        android:textColor="@color/blue" />

    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/read_more"
        android:background="@color/dark_gray_light" />


</RelativeLayout>