<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_gravity="end"
        android:padding="12dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/opinion_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="আপনার নাম"
            android:background="@null"
            android:hint="আপনার নাম"
            android:inputType="text"
            android:padding="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/opinion_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/user_name"
            android:background="@null"
            android:hint="@string/opinion_subject"
            android:inputType="text"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/opinion_descriptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/opinion_description"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:gravity="top"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/blue"
        android:padding="10dp"
        android:textAllCaps="false"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="8dp" />



</LinearLayout>